--- a/bespire-front/src/app/globals.css
+++ b/bespire-front/src/app/globals.css
@@ -398,3 +398,14 @@ body {
   text-decoration: underline;
   cursor: pointer;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
